Footer fixed on mobile and portrait still things to fix with footer

--- a/app/assets/stylesheets/layouts/_footer.scss
+++ b/app/assets/stylesheets/layouts/_footer.scss
@@ -10,6 +10,14 @@
   @include for-phone-only {
     justify-content: center;
     height: 35px;
+    position: fixed;
+    bottom: 0;
+    background: white;
+  }
+  @include for-tablet-portrait-only {
+    position: fixed;
+    bottom: 0;
+    background: white;
   }
 }
 
