--- a/app/assets/stylesheets/layouts/_gabarit.scss
+++ b/app/assets/stylesheets/layouts/_gabarit.scss
@@ -2,6 +2,10 @@
   overflow: hidden;
 }
 
+.heigt-100vh {
+  height: 100vh;
+}
+
 // **** BASE RESPONSIVE FONT ****
   body {
     color: $conscients-grey;
