--- a/app/assets/stylesheets/pages/_checkout.scss
+++ b/app/assets/stylesheets/pages/_checkout.scss
@@ -12,40 +12,12 @@
       order: 1;
     }
   }
-// CHANGE ORDER
-  // .cart-on-top {
-  //   @include for-phone-only {
-  //     order: 1;
-  //   }
-  //   @include for-tablet-portrait-only {
-  //     order: 1
-  //   }
-  // }
-
-  // .delivery-below {
-  //   @include for-phone-only {
-  //     order: 2;
-  //   }
-  //   @include for-tablet-portrait-only {
-  //     order: 2;
-  //   }
-  // }
-
 
   .mobile-cart {
     @include for-tablet-landscape-up {
       display: none;
     }
   }
-
-  // .desktop-cart {
-  //   @include for-phone-only {
-  //     display: none;
-  //   }
-  //   @include for-tablet-portrait-only {
-  //     display: none;
-  //   }
-  // }
 
   .desktop-cart {
     display: none;
@@ -55,10 +27,6 @@
   }
 
 // REVEAL CART ON MOBILE
-  // .side-label:hover {
-  //   text-decoration: underline;
-  // }
-
   .side-label {
     cursor: pointer;
   }
@@ -74,20 +42,16 @@
 
   #cart-mobile:checked ~ .reveal-cart {
     display: block;
-    // color: red;
-    // background-color: black;
   }
 
-
-
-
 //ON TOP
+
   .checkout-first-title-padding {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    @include for-phone-only {
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 0;
+    @include for-tablet-landscape-up {
+      padding-top: 30px;
+      padding-bottom: 30px;
     }
   }
 
@@ -107,8 +71,10 @@
   .checkout-box {
     display:flex;
     flex-direction: column;
+    padding-top: 0;
       @include for-tablet-landscape-up {
         flex-direction: row;
+        padding-top: 16px;
       }
   }
 
